--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers.SideMenuCtrl.js"></script>
     <script src="js/services.Acl.js"></script>
     <script src="js/services.Modal.js"></script>
     <script src="js/services.User.js"></script>
